--- a/Todo-App-TypeScript/src/components/SideBar/stylex.module.css
+++ b/Todo-App-TypeScript/src/components/SideBar/stylex.module.css
@@ -4,16 +4,25 @@
 .container{
 display: grid;
 padding: 0 5rem ;
+justify-content: space-evenly;
 max-width: 1280px;
 grid-template-areas:
-"title . . . . . . . "
-"filter1 filter1 filter1 filter1 filter2 filter2 filter2 filter2 ";
+"title title title title title title title title title"
+"filter1 filter1 filter1 filter1 filter2 filter2 filter2 filter2 filter2 ";
 }
 hr{
   display: none;
 }
-.calendar{
+.doneArea{
   grid-area: filter1;
+}
+.innerDoneArea{
+  display: flex;
+  flex-direction: column;
+}
+.innerCategoryArea{
+  display: flex;
+  flex-direction: column;
 }
 .category{
   grid-area: filter2;
@@ -47,8 +56,19 @@ li{
     padding: 0 2.5rem;
   }
 }
+@media screen and (min-width: 768px) {
+  .container{
+    padding: 0 200px;
+  }
+  .innerCategoryArea{
+    flex-direction: row;
+  }
+  .innerDoneArea{
+    flex-direction: row;
+  }
+}
 
-@media screen and (min-width: 1480px) {
+@media screen and (min-width: 1400px) {
   .container{
     display: block;
     position: fixed;
@@ -61,9 +81,15 @@ li{
     box-shadow: 10px 0px 5px 0px rgba(0, 0, 0, 0.5);
     width: 15%;
   }
-  .calendar,.category,.importants{
+  .doneArea,.category,.importants{
     padding: 3rem 0;
     display: block;
+  }
+  .innerDoneArea{
+    flex-direction: column;
+  }
+  .innerCategoryArea{
+    flex-direction: column;
   }
   h4{
     margin: 0 0 1rem 0;
